--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "ava": "^4.0.0",
+    "typescript": "^4.5.4"
   },
-  "workspaces": ["projects/*"]
+  "workspaces": [
+    "projects/*"
+  ]
 }
