--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "ava": "^4.0.0",
+    "benny": "^3.7.1",
     "typescript": "^4.5.4"
   },
   "workspaces": [
