--- a/packages/diff/tsconfig.json
+++ b/packages/diff/tsconfig.json
@@ -1,7 +1,7 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "../../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./cjs",
     },
     "include": ["./index.ts"]
 }
