--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "benny": "^3.7.1",
     "typescript": "^4.5.4"
   },
+  "scripts": {
+    "bootstrap": "pnpm i"
+  },
   "workspaces": [
     "projects/*"
   ]
