--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ava": "^4.0.0",
     "benny": "^3.7.1",
     "c8": "^7.11.0",
+    "rollup": "^2.63.0",
     "typescript": "^4.5.4"
   },
   "scripts": {
