--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
     "ava": "^4.0.0",
     "benny": "^3.7.1",
     "c8": "^7.11.0",
     "rollup": "^2.63.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
   "scripts": {
