feat(generate-password): rewrite shuffle

--- a/packages/generate-password/package.json
+++ b/packages/generate-password/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "pnpx ava",
     "test:coverage": "pnpx c8 ava",
-    "build": "pnpx tsc && pnpx rollup -c rollup.config.js"
+    "build": "pnpx tsc && pnpx rollup -c rollup.config.js",
+    "benchmark": "node benchmark.js"
   },
   "files": [
     "cjs",
@@ -35,5 +36,8 @@
     "url": "https://github.com/ZxBing0066/zlib/issues"
   },
   "homepage": "https://github.com/ZxBing0066/zlib/tree/master/packages/generate-password#readme",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "generate-password": "^1.7.0"
+  }
 }
