--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "benny": "^3.7.1",
     "c8": "^7.11.0",
     "rollup": "^2.63.0",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
