--- a/packages/shuffle/package.json
+++ b/packages/shuffle/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zlib/shuffle",
-  "version": "0.0.1",
-  "description": "A tiny shuffle of javascript",
+  "version": "1.0.0",
+  "description": "A tiny shuffle for array/string of javascript",
   "main": "cjs/index.cjs",
   "module": "esm/index.js",
   "types": "./types/index.d.ts",
