--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zlib/diff",
+  "name": "turbo-diff",
   "version": "1.0.3",
   "description": "A fast and small diff library for js/json data",
   "main": "cjs/index.cjs",
