--- a/packages/shuffle/package.json
+++ b/packages/shuffle/package.json
@@ -4,8 +4,9 @@
   "description": "A tiny shuffle for array/string of javascript",
   "main": "cjs/index.cjs",
   "module": "esm/index.js",
-  "types": "./types/index.d.ts",
-  "jsdeliver": "umd/index.min.js",
+  "types": "types/index.d.ts",
+  "unpkg": "umd/index.min.js",
+  "jsdelivr": "umd/index.min.js",
   "scripts": {
     "test": "pnpx ava",
     "test:coverage": "pnpx c8 ava",
