--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/node": "*",
     "ava": "^4.0.0",
     "benny": "^3.7.1",
     "c8": "^7.11.0",
+    "commitizen": "^4.2.4",
+    "git-cz": "^4.8.0",
     "rollup": "^2.63.0",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
