--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "*",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "ava": "^4.0.0",
     "benny": "^3.7.1",
     "c8": "^7.11.0",
     "commitizen": "^4.2.4",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
     "git-cz": "^4.8.0",
+    "husky": "^7.0.0",
+    "prettier": "^2.5.1",
     "rollup": "^2.63.0",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
   "scripts": {
+    "prepare": "husky install",
     "bootstrap": "pnpm i"
   },
   "workspaces": [
