--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-prettier": "^8.3.0",
     "git-cz": "^4.8.0",
     "husky": "^7.0.0",
+    "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "rollup": "^2.63.0",
     "rollup-plugin-terser": "^7.0.2",
