--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eslint-config-prettier": "^8.3.0",
     "git-cz": "^4.8.0",
     "husky": "^7.0.0",
+    "lerna": "^5.1.8",
     "lint-staged": "^12.2.2",
+    "nx": "^14.4.3",
     "prettier": "^2.5.1",
     "rollup": "^2.63.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -25,8 +27,5 @@
     "prepare": "husky install",
     "bootstrap": "pnpm i"
   },
-  "workspaces": [
-    "projects/*"
-  ],
   "type": "module"
 }
