--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/node": "*",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "ava": "^4.0.0",
     "benny": "^3.7.1",
     "c8": "^7.11.0",
@@ -18,10 +19,9 @@
     "lint-staged": "^12.2.2",
     "nx": "^14.4.3",
     "prettier": "^2.5.1",
-    "rollup": "^2.63.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4"
+    "rollup": "^2.79.1",
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "prepare": "husky install",
