--- a/packages/diff/tsconfig.json
+++ b/packages/diff/tsconfig.json
@@ -3,5 +3,5 @@
     "compilerOptions": {
         "declarationDir": "./types"
     },
-    "include": ["./index.ts"]
+    "include": ["./index.ts", "./formatter/*"]
 }
